<resources>
    <string name="empty_string" />

    <string name="app_name">Playlist Maker Compose</string>
    <string name="btn_search">Поиск</string>
    <string name="btn_library">Медиатека</string>
    <string name="btn_settings">Настройки</string>
    <string name="btn_dark_theme">Темная тема</string>
    <string name="btn_share">Поделиться приложением</string>
    <string name="btn_support">Написать в поддержку</string>
    <string name="btn_user_agreement">Пользовательское соглашение</string>

    <string name="curs_uri">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email">Dezrio@yandex.ru</string>
    <string name="offer_uri">https://yandex.ru/legal/practicum_offer/</string>

    <string name="track_url">https://itunes.apple.com</string>
    <string name="track_name_text">Наименование</string>
    <string name="track_author_text">Длительность трэка</string>
    <string name="track_duration_text">00:00</string>

    <string name="not_found_search_text">Ничего не нашлось</string>
    <string name="error_search_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_search_text">Обновить</string>

    <string name="history_search_text">Вы искали</string>
    <string name="history_search_clear_text">Очистить историю</string>
    <string name="search_clear_text">Очистить</string>

    <string name="track_duration_player_text">Длительность</string>
    <string name="track_album_player_text">Альбом</string>
    <string name="track_year_player_text">Год</string>
    <string name="track_genre_player_text">Жанр</string>
    <string name="track_country_player_text">Страна</string>
    <string name="track_time_placeholder">00:00</string>
    <string name="track_cover_player_text">Обложка трека</string>

    <string name="media_library_tab_favourite_tracks">Избранные треки</string>
    <string name="media_library_tab_playlists">Плейлисты</string>
    <string name="media_library_empty_favourite_tracks_text">Ваша медиатека пуста</string>
    <string name="media_library_empty_playlists_text">Вы не создали\nни одного плейлиста</string>
    <string name="media_library_btn_new_playlist">Новый плейлист</string>

    <string name="playlist_title">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="btn_create_playlist">Создать</string>
    <string name="back_title">Завершить создание плейлиста?</string>
    <string name="back_message">Все несохраненные данные будут потеряны</string>
    <string name="back_ok">Завершить</string>
    <string name="back_cancel">Отмена</string>
    <string name="permission_title">Перейти в настройки приложения?</string>
    <string name="permission_message">Для загрузки фото необходимо предоставить разрешение</string>
    <string name="permission_notifications_message">Для проигрывания трека необходимо разрешение на показ уведомлений</string>
    <string name="permission_ok">Перейти</string>
    <string name="permission_cancel">Отмена</string>
    <string name="toast_playlist">Плейлист</string>
    <string name="toast_created">создан</string>
    <string name="toast_updated">обновлен</string>
    <string name="toast_already_exists">уже существует</string>

    <string name="playlist_title_test">Музыка для хорошего вечера</string>
    <string name="playlist_tracks_count_test">5 треков</string>
    <string name="playlist_cover_description">Обложка плейлиста</string>
    <string name="menu_item_delete">Удалить</string>

    <string name="bottom_sheet_player_title">Добавить в плейлист</string>
    <string name="toast_success_adding_track_to_playlist">Добавлено в плейлист</string>
    <string name="toast_track_already_exists_in_playlist">Трек уже добавлен в плейлист</string>

    <string name="btn_add_playlist_title">Новый плейлист</string>

    <plurals name="track_plurals">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="time_plurals">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="dialog_delete_track">Хотите удалить трек?</string>
    <string name="dialog_delete_playlist">Хотите удалить плейлист \"</string>
    <string name="question">\"\?</string>
    <string name="dialog_btn_yes">Да</string>
    <string name="dialog_btn_no">Нет</string>
    <string name="toast_nothing_tracks_for_sharing_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="dialog_delete_message">Хотите удалить плейлист \"%1$s\"\?</string>

    <string name="media_library_btn_edit_playlist">Редактировать</string>
    <string name="btn_save_playlist">Сохранить</string>
    <string name="toast_playlist_without_changes">Нет изменений для сохранения</string>
    <string name="empty_playlist_track_list_message">В этом плейлисте нет треков</string>

    <string name="audio_player_notification_channel_description">Audio player notification channel</string>
    <string name="track_details">Детали трека</string>
</resources>