<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    android:padding="5dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="12dp"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="@string/app_name" />
    </FrameLayout>

    <Button
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="6dp"
        app:iconTint="@color/black"
        app:cornerRadius="16dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginHorizontal="@dimen/main_padding"
        android:layout_marginTop="@dimen/main_padding"
        android:layout_marginBottom="@dimen/main_padding_between"
        android:text="@string/btn_search"
        android:textColor="@color/black" />

    <Button
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="6dp"
        app:iconTint="@color/black"
        app:cornerRadius="16dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginHorizontal="@dimen/main_padding"
        android:layout_marginVertical="@dimen/main_padding_between"
        android:text="@string/btn_library"
        android:textColor="@color/black" />

    <Button
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="6dp"
        app:iconTint="@color/black"
        app:cornerRadius="16dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginHorizontal="@dimen/main_padding"
        android:layout_marginTop="@dimen/main_padding_between"
        android:layout_marginBottom="@dimen/main_padding"
        android:text="@string/btn_settings"
        android:textColor="@color/black" />

</LinearLayout>