<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension_60"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_playlistCover"
            android:layout_width="@dimen/dimension_45"
            android:layout_height="@dimen/dimension_45"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dimension_13"
            android:contentDescription="@string/playlist_cover_description"
            tools:src="@drawable/player_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_playlist_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                android:layout_marginStart="@dimen/dimension_8"
                android:layout_marginEnd="@dimen/dimension_16"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="@string/playlist_title_test" />

            <TextView
                android:id="@+id/tv_playlist_tracks_count"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="11sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimension_8"
                android:layout_marginTop="@dimen/dimension_1"
                android:layout_marginEnd="@dimen/dimension_16"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="@string/playlist_tracks_count_test" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>