<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fr_add_playlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?attr/colorPrimary"
    tools:context=".ui.medialibrary.fragment.AddPlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/playerHeader"
            style="@style/HeaderFrame"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/playlist_arrow_back"
                style="@style/HeaderImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/playlist_title"
                style="@style/HeaderText"
                android:text="@string/btn_add_playlist_title"
                app:layout_constraintStart_toEndOf="@id/playlist_arrow_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_add_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="iv_add_cover, iv_ic_add_cover" />

        <ImageView
            android:id="@+id/iv_add_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dimension_24"
            android:layout_marginTop="@dimen/dimension_26"
            android:clickable="true"
            android:contentDescription="@string/playlist_cover_description"
            android:src="@drawable/ic_playlist_cover"
            app:layout_constraintDimensionRatio="h, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="iv_add_cover"
            app:layout_constraintTop_toBottomOf="@id/playerHeader" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_playlist_title"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimension_16"
            android:layout_marginTop="@dimen/dimension_32"
            android:hint="@string/playlist_title"
            app:layout_constrainedHeight="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_add_cover">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_playlist_title"
                style="@style/EditTextPlaylistBaseStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimension_56" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_playlist_description"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimension_16"
            android:layout_marginTop="@dimen/dimension_16"
            android:hint="@string/playlist_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_playlist_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_playlist_description"
                style="@style/EditTextPlaylistBaseStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimension_56" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_create_playlist"
            style="@style/BtnPlaylistColorStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_44"
            android:layout_marginHorizontal="@dimen/dimension_17"
            android:layout_marginTop="@dimen/dimension_16"
            android:layout_marginBottom="@dimen/dimension_32"
            android:enabled="false"
            android:text="@string/btn_create_playlist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_playlist_description"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>