<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vhTrack"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivArtworkUrl100"
        android:layout_weight="0"
        android:layout_marginStart="13dp"
        android:layout_marginVertical="8dp"
        android:layout_width="45dp"
        android:layout_height="45dp"
        style="@style/TrackPlaceholder"/>

    <FrameLayout
        android:layout_marginTop="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/vhTrackName"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:textColor="?colorOnSecondary"
            android:textSize="16sp"
            android:fontFamily="@font/ys_display_regular"
            tools:text="@string/track_name_text"/>

        <LinearLayout
            android:layout_marginTop="34dp"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vhArtistName"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="11sp"
                android:fontFamily="@font/ys_display_regular"
                tools:text="@string/track_author_text"
                style="@style/TrackInfoText"/>

            <ImageView
                android:layout_weight="0"
                android:layout_width="13dp"
                android:layout_height="match_parent"
                android:src="@drawable/dot"
                style="@style/TrackIcon"/>

            <TextView
                android:id="@+id/vhTrackTime"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="11sp"
                android:fontFamily="@font/ys_display_regular"
                tools:text="@string/track_duration_text"
                style="@style/TrackInfoText"/>
        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:layout_weight="0"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/arrow_forward"
        style="@style/TrackIcon"/>

</LinearLayout>